--conact-page-design

--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -20,7 +20,7 @@
             <li>Merchent login and order summary</li>
             <li>Suggesion box to up-selling and cross-selling </li>
           </ul>
-          <a class="btn btn-brown btn-xl js-scroll-trigger" href="Product-Ecommerce">View</a>
+          <!-- <a class="btn btn-brown btn-xl js-scroll-trigger" href="Product-Ecommerce">View</a> -->
         </div>
       </div>
       <div class="col-lg-6 mb-2">
