-- logo and manydesign updates

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,8 +1,8 @@
 .color-red{
-    color: #000000!important;
+    color: #074367!important;
 }
 .btn-brown {
     color: #fff;
-    background-color: #7e5050;
-    border-color: #212529;
+    background-color: #074367!important;
+    /* border-color: #212529; */
 }
