--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,12 @@
         <source src="../../assets/Video/Waves.mp4" type="video/mp4">
       </video> -->
 
-      <div class="container  text-center my-auto" style=" padding: 4%;background: #f8f9fabf;font-weight: bolder;color: #7e5050!important;    height: fit-content;    width: fit-content;">
-        <img src="../../assets/img/cos-Black-bg.png" alt="" class=" animate__flipInY animate__animated  img-hero img-fluid">
+      <div class="container home-hero  text-center my-auto" >
+        <img src="../../assets/img/logo.png" alt="" class=" animate__flipInY animate__animated  img-hero img-fluid">
+        <h1 class="animate__fadeIn brand-hero animate__delay-1s animate__animated ">
+            Creative Optimum Solution
+        </h1>
+
         <h3 class="animate__fadeInUp animate__delay-2s animate__animated ">
             Web Development Solutions 
             | Business software Solutions
