--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
 <nav *ngIf="!isActive" id="sidebar-wrapper" class="active">
   <ul class="sidebar-nav">
     <li class="sidebar-brand">
-      <a class="js-scroll-trigger" routerLink="home">Creative Optimum Solution</a>
+      <a class="js-scroll-trigger" routerLink="home"> <img src="../../assets/img/logo.png" class="navbar-hero" alt=""> Creative Optimum Solution</a>
     </li>
     <li class="sidebar-nav-item">
       <a class="js-scroll-trigger" routerLink="home">Home</a>
