--- a/src/app/page-contact/page-contact.component.css
+++ b/src/app/page-contact/page-contact.component.css
@@ -34,9 +34,9 @@
 }
 .theme-color-inv{
     color: white!important;
-    background-color: #7e5050!important;
+    background-color: #074367!important;
 }
 .theme-color{
-    color:  #7e5050 !important;
+    color:  #074367 !important;
     background-color:white!important;
 }
