--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
     
-    <section class="content-section " style="background: rgb(255 255 255);color: #7e5050 !important;" id="portfolio">
+    <section class="content-section text-secondary" style="background: rgb(255 255 255);" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
         <h3 class="mb-0">
