--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -13,20 +13,21 @@
         <div class="rounded text-center p-5 shadow-down"
           style="background-color: #d4d4d440;box-shadow: 0px 0px 20px 9px #0000002e;">
           <h4 class="mb-5">Contact Form</h4>
-          <form action="#" class="row">
+          <form [formGroup] = "contactForm" (ngSubmit)="onSubmit()" class="row">
+            <!-- [FormGroup]="formdata"  -->
             <div class="col-md-6">
-              <input type="text" id="name" name="name" placeholder="Full Name" class="form-control px-0 mb-4" required>
+              <input formControlName="Name" type="text" placeholder="Full Name" class="form-control px-0 mb-4" required>
             </div>
             <div class="col-md-6">
-              <input type="email" id="email" name="email" placeholder="Email Address" class="form-control px-0 mb-4"
+              <input type="email"  formControlName="Email"  placeholder="Email Address" class="form-control px-0 mb-4"
                 required>
             </div>
             <div class="col-12">
-              <input list="Options" type="text" name="option" id="option" class="form-control px-0 mb-4" placeholder="Type of enquiry"
+              <input list="Options" type="text"  formControlName="option" class="form-control px-0 mb-4" placeholder="Type of enquiry"
                 required>
             </div>
             <datalist id="Options">
-              <option value="Sales- General"></option>
+              <option value="Sales-General"></option>
               <option value="Quotation of products"></option>
               <option value="Services description"></option>
               <option value="Support- Ask us technologies"></option>
@@ -34,11 +35,11 @@
               <option value="Other- You still have another option"></option>
             </datalist>
             <div class="col-12">
-              <textarea name="message" id="message" class="form-control px-0 mb-4" placeholder="Type Message Here"
+              <textarea  formControlName="message" class="form-control px-0 mb-4" placeholder="Type Message Here"
                 required></textarea>
             </div>
             <div class="col-lg-6 col-10 mx-auto">
-              <button class="theme-color btn btn-primary w-100">send</button>
+              <button class="theme-color-inv btn btn-primary w-100">send</button>
             </div>
           </form>
         </div>
