--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -1,5 +1,5 @@
 <header class="my-masthead d-flex">
-    <div class="container text-center my-auto masthead-text">
+    <div class="container text-center my-auto  masthead-text-m">
         <h1 class="mb-1">About Us</h1>
         Know us from Stones to satellites
     </div>
