--- a/src/app/page-contact/page-contact.component.css
+++ b/src/app/page-contact/page-contact.component.css
@@ -40,3 +40,14 @@
     color:  #074367 !important;
     background-color:white!important;
 }
+.contact-form-style{
+    background-color: #d4d4d440;
+    box-shadow: 0px 0px 20px 9px #0000002e;
+}
+:host {
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 0.5em;
+    z-index: 1200;
+  }
