--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -1,5 +1,5 @@
 <header class="my-masthead d-flex">
-  <div class="container text-center my-auto masthead-text">
+  <div class="container text-center my-auto masthead-text-m">
     <h1 class="mb-1">Our Products</h1>
     All solutions ready to deploy within a week
   </div>
