--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,43 +2,45 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <ul class="list-inline mb-5">
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3"
-              href="https://www.facebook.com/Creative-Optimum-Solution-101248385821673" target="_blank">
-              <i class="icon-social-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/CreOpSoln">
-              <i class="icon-social-twitter"></i>
-            </a>
-          </li>
-          <!-- <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#!">
-              <i class="icon-social-github"></i>
-            </a>
-          </li> -->
-        </ul>
+        <div class="list-inline">
+          <div class="row">
+            <div class="col text-center mb-4">
+              <a class="social-link rounded-circle text-white "
+                href="https://www.facebook.com/Creative-Optimum-Solution-101248385821673" target="_blank">
+                <i class="icon-social-facebook"></i>
+              </a>
+            </div>
+            <div class="col text-center mb-4">
+              <a class="text-white  social-link rounded-circle" href="https://twitter.com/CreOpSoln" target="_blank">
+                <i class="icon-social-twitter"></i>
+              </a>
+            </div>
+          </div>
+
+
+  
+
+        </div>
       </div>
       <div class="col-md-6">
         <p>
           We are a web development and solutions provider for small, medium, and large-scale web applications. We
           founded in 2018 with a vision of developing solutions for small-scale business partners and startups like us
-          to provide excellent services, seamless experience, and end-to-end journey while developing and designing their
+          to provide excellent services, seamless experience, and end-to-end journey while developing and designing
+          their
           business's digital identity.
         </p>
       </div>
-      <div class="col-md-3 right">
+      <div class="col-md-3 right mb-4">
         <img src="../../assets/img/cos-Black-bg.png" style="width: 100%;" class="img img-fluid" alt="">
-          
-        </div>
+
+      </div>
 
     </div>
 
 
   </div>
-  <p class="text-muted medium mb-0">Made with love by 	&hearts; creative optimum solution 2021</p>
+  <p class="text-muted medium mb-0">Made with love by &hearts; creative optimum solution 2021</p>
 </footer>
 
 <!-- Scroll to Top Button-->
