--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 }
 
 .my-masthead {
-    background-color: rgb(219, 219, 219);
+    background-color: #e9f7ff;
     height: fit-content;
     padding: 1%;
 }
@@ -22,15 +22,24 @@
     color: #074367!important;
     background: #ffffff00;
 }
-.masthead-text {
+.masthead-text-m {
     padding: 2%;
-    color: #074367!important;
-    background: #f4f4f4;
-    box-shadow: 1px 0px 11px #6c757d;
-    font-weight: bolder;
-    width: 100%;
+    color: #155d74!important;
+    background: rgb(0 0 0 / 13%);
+    box-shadow: 0px 0px 20px 0px #0000000f;
     border-radius: 7px;
 }
+
+.masthead-text {
+    padding: 2%;
+    color: #155d74!important;
+    margin:3%;
+    background: rgb(233 247 255 / 65%);
+    box-shadow: 0px 0px 20px 0px #000000aa;
+    border-radius: 7px;
+    font-weight: 400;
+}
+
 .bg-primary {
     background-color: #074367!important;
 }
@@ -55,9 +64,14 @@
     background: #074367;
     border-left: 1px solid rgba(255,255,255,.1);
 }
+.bglight{
+    background-color: #e9f7ff!important;
+}
+
+
 
 footer.footer .social-link {
-    display: block;
+    display: inline-table;
     height: 4rem;
     width: 4rem;
     line-height: 4.3rem;
