--- a/src/app/toast-data/toast-data.component.html
+++ b/src/app/toast-data/toast-data.component.html
@@ -1,5 +1,3 @@
 <p>Please click one of the button to see a Toast being displayed in the top right corner of your screen:</p>
-<button class="btn btn-primary" (click)="showStandard()" ngbTooltip="Will disappear in 5s">Standard toast</button>&nbsp;
 <button class="btn btn-success" (click)="showSuccess()" ngbTooltip="Will disappear in 10s">Success toast</button>&nbsp;
-<button class="btn btn-danger" (click)="showDanger(dangerTpl)" ngbTooltip="Will disappear in 15s">Danger toast</button>&nbsp;
-<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+<!-- <app-toasts aria-live="polite" aria-atomic="true"></app-toasts> -->
