--- a/src/app/page-contact/page-contact.component.css
+++ b/src/app/page-contact/page-contact.component.css
@@ -44,10 +44,14 @@
     background-color: #d4d4d440;
     box-shadow: 0px 0px 20px 9px #0000002e;
 }
-:host {
+/* :host {
     position: fixed;
     top: 0;
     right: 0;
     margin: 0.5em;
     z-index: 1200;
-  }
+  } */
+  .content-section {
+    padding-top: 2.5rem;
+    padding-bottom: 7.5rem;
+}
