--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,11 +2,11 @@
   <div class="container text-center">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
+        <h2>"Technical advancement is not extravagance it's the bare minimum!"</h2>
         <p class="lead mb-5" style="font-weight: 400;">We are just a new solution provider who will advance you in all
-          the tearms wanna know which things you need to make your business fly.
+          the terms if you want to know which things you need to grow your business.
         </p>
-        <a class="btn btn-brown btn-xl js-scroll-trigger" routerLink="/about">Know Us</a>
+        <a class="btn btn-brown btn-xl js-scroll-trigger" routerLink="/Contact">Contact Us</a>
       </div>
     </div>
   </div>
