--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -13,53 +13,45 @@
         <div class="row">
             <div class="col-lg-10 mx-auto">
                 <p class="lead">
-                    We are solution provider understood the growth in every aspect of the technology to make business
-                    from screach. We are group of remakeable people who developed our intrest in IT field to encourage
-                    other industries grow advancing their technical knowledge.
+                    We are the solution provider who understands the growth in every aspect of the technology to grow
+                    any business from scratch. We are a group of remarkable people who developed our interest in the IT
+                    field to encourage other industries to grow and advance their technical knowledge.
                 </p>
-                <h2 class="text-center text-brown"> " We are tech enthusiasts who provide services and extensions to
-                    your business
-                    using technology and data."</h2>
+                <h2 class="text-center text-brown">"We are tech enthusiasts who provide services and extensions to your
+                    business using technology and data."</h2>
                 <p class="lead mb-5">
                     We are tech enthusiasts who provide services and extensions to your business using technology and
-                    data.
-                    We had started this company with the idea of resolving problems in every industry. Trust and honesty
-                    are foundations for our "Creative Optimum Solution" as they define our intentions to the client's
-                    confidentiality.
-
+                    data. We had started this company with the idea of resolving problems in every industry. Trust and
+                    honesty are foundations for our "Creative Optimum Solution" as they define our intentions for the
+                    client's confidentiality.
                 </p>
                 <div class="bg-light">
                     <!-- <h3 class="text-center">Our Brand Ethics </h3> -->
                     <h3> Creative</h3>
                     <p class="lead mb-5  ">
-                        Creativity is our pivotal approach for solving problems. We follow Agile methodology to report
-                        the
-                        productions because it traditionally allows other organizations to collaborate flexibly. We
-                        provide
-                        out-of-the-box solutions which can make your business stand out in the queue.
+                        Creativity is our pivotal approach to solving problems. We follow Agile methodology to report
+                        the productions because it traditionally allows other organizations to collaborate flexibly. We
+                        provide out-of-the-box solutions which can make your business stand out in the queue.
                     </p>
 
                     <h3>Optimum</h3>
                     <p class="lead mb-5  ">
                         As our solutions are optimistic, we can provide you with the information for the problem in
-                        every
-                        step, so you don't need to rely on us. We design solution and document and log them to provide
-                        clear
-                        picture of the solution space.
+                        every step, so you don't need to rely on us. We design solutions and document and log them to
+                        provide a clear picture of the solution space.
                     </p>
                     <h3>Solution</h3>
                     <p class="lead mb-5  ">
                         The solution is a process of development with a depth of necessity, analytics, and future growth
-                        of
-                        your business. We use multiple critical thinking tools to develop robust solutions for your
+                        of your business. We use multiple critical thinking tools to develop robust solutions for your
                         business.
                     </p>
                 </div>
 
                 <h3 class="text-center">Our Environment</h3>
                 <p class="lead mb-5  ">
-                    We encourage growth environment with thorough understanding and experienced individuals which gives
-                    us realistic and creative approach to satisfy our client's needs.
+                    We encourage a growth environment in our organization and all the businesses we partner with, so we
+                    grow in a very fast-paced yet with an understanding of perfection in our work.
                 </p>
                 <h3>
                     Growth
@@ -68,6 +60,7 @@
                     To grow, we encourage our team to learn new technologies and tools. We also love to migrate from old
                     technologies to new trending technologies to reveal new opportunities and continuous advancement in
                     the industry.
+
                 </p>
                 <br><br>
                 <div class="bg-light">
@@ -82,7 +75,7 @@
                                 Development
                             </h3>
                             <p class="lead mb-5">
-                                We deliver development in C#, PHP, Angular, Node js, React Js and Android.
+                                We deliver development in C#, PHP, Angular, Node js, React js, and Android.
                             </p>
                         </div>
 
@@ -94,7 +87,7 @@
                                 Web Design
                             </h3>
                             <p class="lead mb-5">
-                                We deliver web designing using Matirialize, Bootstrep, Angular, HTML, JS, and CSS.
+                                We deliver web designing using Materialize, Bootstrap, Angular, HTML, JS, and CSS.
                             </p>
                         </div>
 
@@ -107,7 +100,7 @@
                                 API Cretion
                             </h3>
                             <p class="lead mb-5">
-                                We create APIs for Payment gateways, SMS inegration and Seek Job platform.
+                                We create APIs for Payment gateways, SMS integration, and Seek Job platform.
                             </p>
                         </div>
                         <div class="text-center col-md-3">
@@ -119,7 +112,7 @@
                                 Data analysis
                             </h3>
                             <p class="lead mb-5">
-                                We analyze data using Python, R, Power BI, Tableau and Google analytics.
+                                We analyze data using Python, R, Power BI, Tableau, and Google analytics.
                             </p>
                         </div>
                     </div>
