--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -16,7 +16,7 @@
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">COS E-commerce</div>
-                <p class="mb-0">To help you grow in your Business or start a new one with online purchaching and delivery systems please take a look at our E-commerce portal</p>
+                <p class="mb-0">To help you grow in your Business or start a new one with online purchasing and delivery systems please take a look at our E-commerce portal</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
@@ -27,7 +27,7 @@
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">I & I Management</div>
-                <p class="mb-0">To manage your small business you don't need to buy enterprise level ERPs.</p>
+                <p class="mb-0">To manage your small business you don't need to buy enterprise-level ERPs.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
@@ -38,7 +38,7 @@
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Restaurents and Resrvations</div>
-                <p class="mb-0">Online ordering and resrvations sounds cool? Take your traditions one step further.</p>
+                <p class="mb-0">Does online ordering and reservations sound cool? Take your traditions one step further. Keep track of your employee's time </p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
@@ -48,8 +48,8 @@
           <a class="portfolio-item" routerLink="/products">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Assesment helper</div>
-                <p class="mb-0">Help build future generation by letting them understand their learnings.</p>
+                <div class="h2">School Management system</div>
+                <p class="mb-0">Help build future generations by letting them understand their learnings.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
