-parners-spell-check

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,17 +18,16 @@
           </div>
 
 
-  
+
 
         </div>
       </div>
       <div class="col-md-6">
         <p>
           We are a web development and solutions provider for small, medium, and large-scale web applications. We
-          founded in 2018 with a vision of developing solutions for small-scale business partners and startups like us
-          to provide excellent services, seamless experience, and end-to-end journey while developing and designing
-          their
-          business's digital identity.
+          founded this company in 2018 with a vision of developing solutions for small-scale business partners and
+          startups like us to provide excellent services, seamless experience, and end-to-end journey while developing
+          and designing their business's digital identity.
         </p>
       </div>
       <div class="col-md-3 right mb-4">
@@ -44,6 +43,6 @@
 </footer>
 
 <!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded js-scroll-trigger" href="#">
+<!-- <a class="scroll-to-top rounded js-scroll-trigger" href="#">
   <i class="fas fa-angle-up"></i>
-</a>
+</a> -->
