--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -17,29 +17,26 @@
                     any business from scratch. We are a group of remarkable people who developed our interest in the IT
                     field to encourage other industries to grow and advance their technical knowledge.
                 </p>
-                <h2 class="text-center text-brown">"We are tech enthusiasts who provide services and extensions to your
+                <h2 class="text-center text-brown">" We are tech enthusiasts who provide services and extensions to your
                     business using technology and data."</h2>
                 <p class="lead mb-5">
                     We are tech enthusiasts who provide services and extensions to your business using technology and
                     data. We had started this company with the idea of resolving problems in every industry. Trust and
                     honesty are foundations for our "Creative Optimum Solution" as they define our intentions for the
-                    client's confidentiality.
-                </p>
+                    client's confidentiality. </p>
                 <div class="bg-light">
                     <!-- <h3 class="text-center">Our Brand Ethics </h3> -->
-                    <h3> Creative</h3>
+                    <h3>Creative</h3>
                     <p class="lead mb-5  ">
                         Creativity is our pivotal approach to solving problems. We follow Agile methodology to report
                         the productions because it traditionally allows other organizations to collaborate flexibly. We
-                        provide out-of-the-box solutions which can make your business stand out in the queue.
-                    </p>
+                        provide out-of-the-box solutions which can make your business stand out in the queue.</p>
 
                     <h3>Optimum</h3>
                     <p class="lead mb-5  ">
                         As our solutions are optimistic, we can provide you with the information for the problem in
                         every step, so you don't need to rely on us. We design solutions and document and log them to
-                        provide a clear picture of the solution space.
-                    </p>
+                        provide a clear picture of the solution space.</p>
                     <h3>Solution</h3>
                     <p class="lead mb-5  ">
                         The solution is a process of development with a depth of necessity, analytics, and future growth
@@ -51,8 +48,7 @@
                 <h3 class="text-center">Our Environment</h3>
                 <p class="lead mb-5  ">
                     We encourage a growth environment in our organization and all the businesses we partner with, so we
-                    grow in a very fast-paced yet with an understanding of perfection in our work.
-                </p>
+                    grow in a very fast-paced yet with an understanding of perfection in our work.</p>
                 <h3>
                     Growth
                 </h3>
@@ -60,7 +56,6 @@
                     To grow, we encourage our team to learn new technologies and tools. We also love to migrate from old
                     technologies to new trending technologies to reveal new opportunities and continuous advancement in
                     the industry.
-
                 </p>
                 <br><br>
                 <div class="bg-light">
@@ -87,8 +82,7 @@
                                 Web Design
                             </h3>
                             <p class="lead mb-5">
-                                We deliver web designing using Materialize, Bootstrap, Angular, HTML, JS, and CSS.
-                            </p>
+                                We deliver web designing using Materialize, Bootstrap, Angular, HTML, JS, and CSS.</p>
                         </div>
 
                         <div class="text-center col-md-3">
@@ -97,11 +91,10 @@
                                 <i class="fas fa-archway"></i>
                             </span>
                             <h3 class="text-brown">
-                                API Cretion
+                                API Creation
                             </h3>
                             <p class="lead mb-5">
-                                We create APIs for Payment gateways, SMS integration, and Seek Job platform.
-                            </p>
+                                We create APIs for Payment gateways, SMS integration, and Seek Job platform.</p>
                         </div>
                         <div class="text-center col-md-3">
                             <span class=" service-icon rounded-circle mx-auto mb-3">
