--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -20,14 +20,14 @@
             <li>Merchent login and order summary</li>
             <li>Suggesion box to up-selling and cross-selling </li>
           </ul>
-          <!-- <a class="btn btn-brown btn-xl js-scroll-trigger" href="Product-Ecommerce">View</a> -->
+          <a class="btn btn-primary" href="https://merch4creators.com" target="_blank">Visit Demo</a>
         </div>
       </div>
       <div class="col-lg-6 mb-2">
         <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
       </div>
 
-      <div class="col-lg-6 mb-2">
+      <!-- <div class="col-lg-6 mb-2">
         <div class="container">
           <h2>Inventory and Invoiceing</h2>
           <hr>
@@ -40,11 +40,12 @@
             <li>Manage SO/PO/RA/OM</li>
             <li>Manage returns</li>
           </ul>
+          <a class="btn btn-primary">Demo Coming soon</a>
         </div>
-      </div>
+      </div> 
       <div class="col-lg-6 mb-2">
         <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
-      </div>
+      </div>-->
       <div class="col-lg-6 mb-2">
         <div class="container">
           <h2>Restaurent solutions</h2>
@@ -59,6 +60,7 @@
             <li>While showing your deligate and exquisite platform.</li>
             <li>Manage dockets in store.</li>
           </ul>
+          <a class="btn btn-primary" >Demo Coming soon</a>
         </div>
       </div>
       <div class="col-lg-6 mb-2">
