--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,60 +1,95 @@
-    
-    <section class="content-section text-secondary" style="background: rgb(255 255 255);" id="portfolio">
-    <div class="container">
-      <div class="content-section-heading text-center">
-        <h3 class="mb-0">
+<section class="content-section text-secondary" style="background: rgb(255 255 255);" id="portfolio">
+  <div class="container">
+    <div class="content-section-heading text-center">
+      <h3 class="mb-0">
         <h2 class="mb-5">Products as service</h2>
-        </h3>
-      </div>
-      <!-- <div class="content-section-heading text-center">
+      </h3>
+    </div>
+    <!-- <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Products as service</h3>
         <h2 class="mb-5">Deploy your products in less then a week</h2>
       </div> -->
-      <div class="row no-gutters">
-        <div class="col-lg-6">
-          <a class="portfolio-item" routerLink="/products">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">COS E-commerce</div>
-                <p class="mb-0">To help you grow in your Business or start a new one with online purchasing and delivery systems please take a look at our E-commerce portal</p>
-              </div>
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        <a class="portfolio-item" routerLink="/products">
+          <div class="caption">
+            <div class="caption-content">
+              <div class="h2">COS E-commerce</div>
+              <p class="mb-0">To help you grow in your Business or start a new one with online purchasing and delivery
+                systems please take a look at our E-commerce portal</p>
             </div>
-            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" routerLink="/products">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">I & I Management</div>
-                <p class="mb-0">To manage your small business you don't need to buy enterprise-level ERPs.</p>
-              </div>
+          </div>
+          <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
+        </a>
+      </div>
+      <!-- <div class="col-lg-6">
+        <a class="portfolio-item" routerLink="/products">
+          <div class="caption">
+            <div class="caption-content">
+              <div class="h2">I & I Management</div>
+              <p class="mb-0">To manage your small business you don't need to buy enterprise-level ERPs.</p>
             </div>
-            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" routerLink="/products">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">Restaurents and Resrvations</div>
-                <p class="mb-0">Does online ordering and reservations sound cool? Take your traditions one step further. Keep track of your employee's time </p>
-              </div>
+          </div>
+          <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
+        </a>
+      </div> -->
+      <div class="col-lg-6">
+        <a class="portfolio-item" routerLink="/products">
+          <div class="caption">
+            <div class="caption-content">
+              <div class="h2">Restaurents and Resrvations</div>
+              <p class="mb-0">Does online ordering and reservations sound cool? Take your traditions one step further.
+                Keep track of your employee's time </p>
             </div>
-            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" routerLink="/products">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">School Management system</div>
-                <p class="mb-0">Help build future generations by letting them understand their learnings.</p>
-              </div>
+          </div>
+          <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
+        </a>
+      </div>
+      <!-- <div class="col-lg-6">
+        <a class="portfolio-item" routerLink="/products">
+          <div class="caption">
+            <div class="caption-content">
+              <div class="h2">School Management system</div>
+              <p class="mb-0">Help build future generations by letting them understand their learnings.</p>
             </div>
-            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
-          </a>
-        </div>
+          </div>
+          <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
+        </a>
+      </div> -->
+    </div>
+  </div>
+</section>
+
+<section class="content-section bg-primary text-white text-center" id="services">
+  <div class="container">
+    <div class="content-section-heading">
+      <h3 class="mb-0">
+        <h2 class="mb-5">Partners</h2>
+      </h3>
+    </div>
+    <div class="row">
+      <div class="col-md-6 mb-5 ">
+        <span class="mx-auto mb-5">
+          <img class="partners mb-5" src="../../assets/img/Partners/nosnia.png" alt="" />
+        </span>
+        <h4>
+          <strong>NosNia Tech PVT. LTD.</strong>
+        </h4>
+        <p class="text-faded mb-0">Nosnia Technologies has partnered us with providing an extension of innovation and
+          research, throughout the journey of understanding and evolving technology. Moreover, they are providing
+          support for ongoing application development and design in many projects in the last two years.</p>
+      </div>
+      <div class="col-md-6 mb-5">
+        <span class="mx-auto mb-5">
+          <img class="partners mb-5" src="../../assets/img/Partners/PT4.png" alt="" />
+        </span>
+        <h4>
+          <strong>Phoenix Tech</strong>
+        </h4>
+        <p class="text-faded mb-0">Phoenix Tech has provided us resources to manage our customer base additionally risk
+          management for our projects alongside their ongoing support to our customers. They pursue proven technologies
+          and keep themselves reinvesting with new technologies for efficiently serving our customer base. </p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
