--- a/src/app/s-page-web-dev/s-page-web-dev.component.html
+++ b/src/app/s-page-web-dev/s-page-web-dev.component.html
@@ -9,11 +9,11 @@
 <section class="content-section">
     <div class="container">
         <p class="text-center text-large mb-5">
-            "Web Development is time critical, result oriented and complex process. In the era of creativity and
-            exploration, every business has their own requirements and specifications. To overcome needs of web
-            development we strive to provide multiple solutions for your business needs."
+            "Web Development is a time-critical, result-oriented, and complex process. In the era of creativity and
+            exploration, every business has its requirements and specifications. With understanding requirements to web
+            development, we strive to provide multiple solutions for your business needs."
         </p>
-    
+
         <div class="img mb-5">
             <img class="img-fluid" src="../../assets/img/Banners/2.jpg" alt="">
         </div>
@@ -26,8 +26,8 @@
                 <h3 class="text-center theme-color">Flexible</h3>
                 <p>
                     We want to create an application for your custom needs, we use our methodology to understand your
-                    needs before the development and provide flexible web application experience. As being open minded
-                    towards all the organization we provide all kinds of solutions which can help you get relevant
+                    needs before the development and provide a flexible web application experience. As being open-minded
+                    toward all the organizations we provide all kinds of solutions which can help you get relevant
                     information for your business aesthetics.
                 </p>
             </div>
@@ -39,9 +39,10 @@
                 <h3 class="text-center theme-color">Scalable</h3>
                 <p>
                     We can deploy applications from small-scale to large-scale: Including multiple modules and related
-                    applications however its suite your business. We can provide support to your business application
-                    from micro-organization to giant sized organization. As increasing size of organization is common
-                    nature, we provide support to our customers with updates that can help grow your organization.
+                    applications however, it suits your business. We can provide support to your business application
+                    from micro-organization to giant-sized organizations. As the increasing size of organization is
+                    common nature, we provide support to our customers with updates that can help grow your
+                    organization.
                 </p>
             </div>
             <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__tada animate__delay-4s"
@@ -51,10 +52,10 @@
             <div class="col-md-6 text-justify">
                 <h3 class="text-center theme-color">Complex</h3>
                 <p>
-                    We have developed our development model to encourage innovation in every scale. As we have
-                    methodology to breakdown tasks into smaller tasks. We are keen to solve smallest complexity to
-                    highest amount of complexity. As our team is keen and experts in their fields of solving problems,
-                    we can encounter any complexity without breaking a sweat.
+                    We have developed our development model to encourage innovation on every scale. As we have the
+                    methodology to break down tasks into smaller tasks. We are keen to solve the smallest complexity to
+                    the highest amount of complexity. As our team is keen and experts in their fields of solving
+                    problems, we can encounter any complexity without breaking a sweat.
                 </p>
             </div>
         </div>
@@ -62,24 +63,24 @@
             <div class="col-md-4 text-center">
                 <span class="theme-color service-icon rounded-circle mx-auto mb-3">
                     <i class="fab fa-docker"></i>
-                  </span>
+                </span>
                 <h3 class="theme-color">Using complex algorithms</h3>
                 <p>
-                    As incremental behavior of data finding information and displaying is complex process in every
+                    As incremental behavior of data finding information and displaying is a complex process in every
                     business. We have professionals who can develop using complex algorithms like TensorFlow,
-                    Scikit-learn, Keras and multiple open-source platforms to fulfill complexity of applications.
+                    Scikit-learn, Keras, and multiple open-source platforms to fulfill the complexity of applications.
                 </p>
             </div>
 
             <div class="col-md-4 text-center">
                 <span class="theme-color service-icon rounded-circle mx-auto mb-3">
                     <i class="far fa-edit"></i>
-                  </span>
+                </span>
                 <h3 class="theme-color">Web development from scratch</h3>
                 <p>
-                    We can develop and design web applications from scratch according to your usability and flexibility
-                    of your business. Our specialty is to develop a web application which are not only custom-made, but
-                    scalable, and any complexity.
+                    We can develop and design web applications from scratch according to the usability and flexibility
+                    of your business. Our specialty is to develop web applications that are not only custom-made, but
+                    scalable, and of any complexity.
                 </p>
             </div>
 
@@ -87,13 +88,13 @@
             <div class="col-md-4 text-center">
                 <span class="service-icon theme-color text-large rounded-circle mx-auto mb-3">
                     <i class="fas fa-chess-king"></i>
-                  </span>
-                <h3 class="theme-color">Domain Specific applications</h3>
+                </span>
+                <h3 class="theme-color">Domain-Specific applications</h3>
                 <p>
                     We had developed common solutions for your specific domains we can provide those solutions ready to
                     deploy within a week. If you have Restaurant, Teaching institute we can provide solutions for those
-                    domains for your business. If you’re thinking of developing your ecommerce website or you want a
-                    application to manage your orders, inventory and invoicing we have got your back.
+                    domains for your business. If you’re thinking of developing your e-commerce website or you want an
+                    application to manage your orders, inventory, and invoicing we have got your back.
                 </p>
             </div>
         </div>
